objects/SpringCMEos__SpringCM_Attribute_Group__c.object
<CustomObject>
    <fields>
        <fullName>SpringCMEos__Dynamic_Search_Widget_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Get It! Configuration</label>
        <referenceTo>SpringCMEos__DSWConfig__c</referenceTo>
        <relationshipLabel>SpringCM Attribute Groups</relationshipLabel>
        <relationshipName>SpringCM_Attribute_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__ExcludeGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ExcludeGroup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Group__c</fullName>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SpringCM Attribute Group</label>
    <listViews>
        <fullName>SpringCMEos__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCMG-{0000}</displayFormat>
        <label>SpringCM Attribute Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SpringCM Attribute Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>